--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.7.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.29.2",
+    "ai": "^3.0.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.2.1",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.9.16",
-    "wagmi": "^2.5.19"
+    "wagmi": "^2.5.19",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
