--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "ai": "^3.0.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "openai": "^4.0.0",
