--- a/Smartcontract/package.json
+++ b/Smartcontract/package.json
@@ -6,16 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/soomtochukwu/cuberhack.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/soomtochukwu/cuberhack/issues"
-  },
-  "homepage": "https://github.com/soomtochukwu/cuberhack#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
@@ -23,6 +15,8 @@
   },
   "dependencies": {
     "@klaytn/contracts": "^1.0.6",
-    "dotenv": "^16.4.5"
+    "@nomicfoundation/hardhat-verify": "^2.0.11",
+    "dotenv": "^16.4.5",
+    "hardhat-deploy": "^0.12.4"
   }
 }
